@@ -133,3 +133,7 @@ Dale Fountain <dpf-vtun@fountainbay.com>
 	Added support for different sized keys.
 	Re-sync ciphers when using non-ECB modes over a UDP connection.
 	Fixed Bug#908824 (persist=keep not re-applying routes)
+
+Alan Grow <agrow-at-thegotonerd.com>
+	Added a Listening Address/Interface (rfe936523)
+	Cleaned up the code around that portion of the config.
