@@ -202,7 +202,7 @@ struct vtun_opts {
 
    char *svr_name;       /* Server's host name */
    char *svr_addr;       /* Server's address (string) */
-   int  svr_port;	 /* Server's port */
+   struct vtun_addr bind_addr;	 /* Server should listen on this address */
    int  svr_type;	 /* Server mode */
    int  syslog; 	 /* Facility to log messages to syslog under */
 };
